# NewtonMethod

./: CMakeLists.txt  package.xml
src/: newton_method.cpp
